# src/shared/swagger.json
@@ -19,6 +19,11 @@
             "application/json": {
               "schema": {
                 "$ref": "#/definitions/User"
+              },
+              "example": {
+                "name": "Alan Cintra",
+                "email": "alancintra7@gmail.com",
+                "password": "123456"
               }
             }
           }
@@ -65,6 +70,10 @@
                     "type": "string"
                   }
                 }
+              },
+              "example": {
+                "name": "Alan Cintra Gomes",
+                "email":"alancintra7@gmail.com"
               }
             }
           }
@@ -168,6 +177,10 @@
                     "type": "string"
                   }
                 }
+              },
+              "example": {
+                "email": "alancintra7@gmail.com",
+                "password": "123456"
               }
             }
           }
@@ -207,6 +220,84 @@
           },
           "401": {
             "description": "Invalid Refresh Token"
+          }
+        }
+      }
+    },
+    "/password/forgot": {
+      "post": {
+        "tags": ["Password"],
+        "summary": "Send Forgot Password Mail",
+        "description": "Send Forgot Password Mail",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  }
+                },
+                "example": {
+                  "email": "alancintra7@gmail.com"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "Success"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+    "/password/reset": {
+      "post": {
+        "tags": ["Password"],
+        "summary": "Reset User Password",
+        "description": "Reset User Password",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "query",
+            "description": "Reset Password Token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "password": {
+                    "type": "string"
+                  }
+                },
+                "example": {
+                  "password": "123456"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Token expired"
+          },
+          "404": {
+            "description": "Token not found"
           }
         }
       }
